[gd_scene load_steps=22 format=3 uid="uid://bkhwrpk8o2kf8"]

[ext_resource type="Script" uid="uid://bgxgwjvih218s" path="res://scripts/player.gd" id="1_v6fml"]
[ext_resource type="Texture2D" uid="uid://b1cbp5cqk5of2" path="res://assets/player_matroska.png" id="2_bruh7"]
[ext_resource type="Texture2D" uid="uid://dem7ihhnw3g57" path="res://assets/item_ui.png" id="3_3li8b"]
[ext_resource type="Texture2D" uid="uid://dtmx0u7o77cf5" path="res://assets/death_ui.png" id="4_cw2d6"]
[ext_resource type="AudioStream" uid="uid://b2tecjrqk0bcq" path="res://assets/walk_leaf.wav" id="4_mdl7e"]
[ext_resource type="AudioStream" uid="uid://cegk5v6mevv8b" path="res://assets/Throw-stone.wav" id="5_70d11"]
[ext_resource type="AudioStream" uid="uid://b0or0one87vuj" path="res://assets/Damage-sound.wav" id="6_70d11"]
[ext_resource type="AudioStream" uid="uid://8mwl4w6rc1y2" path="res://assets/Collect-item.wav" id="8_khinc"]
[ext_resource type="AudioStream" uid="uid://b4u8vaok4vy0l" path="res://assets/fwwuuuu.wav" id="9_bruh7"]

[sub_resource type="AtlasTexture" id="AtlasTexture_bruh7"]
atlas = ExtResource("2_bruh7")
region = Rect2(0, 0, 128, 130)

[sub_resource type="AtlasTexture" id="AtlasTexture_6eyey"]
atlas = ExtResource("2_bruh7")
region = Rect2(128, 0, 128, 130)

[sub_resource type="AtlasTexture" id="AtlasTexture_d3wef"]
atlas = ExtResource("2_bruh7")
region = Rect2(256, 0, 128, 130)

[sub_resource type="AtlasTexture" id="AtlasTexture_o4126"]
atlas = ExtResource("2_bruh7")
region = Rect2(384, 0, 128, 130)

[sub_resource type="AtlasTexture" id="AtlasTexture_lkdrv"]
atlas = ExtResource("2_bruh7")
region = Rect2(512, 0, 128, 130)

[sub_resource type="AtlasTexture" id="AtlasTexture_p7iby"]
atlas = ExtResource("2_bruh7")
region = Rect2(640, 0, 128, 130)

[sub_resource type="AtlasTexture" id="AtlasTexture_0rnld"]
atlas = ExtResource("2_bruh7")
region = Rect2(768, 0, 128, 130)

[sub_resource type="AtlasTexture" id="AtlasTexture_srp4u"]
atlas = ExtResource("2_bruh7")
region = Rect2(896, 0, 128, 130)

[sub_resource type="SpriteFrames" id="SpriteFrames_jfpux"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bruh7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6eyey")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d3wef")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o4126")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lkdrv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p7iby")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0rnld")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_srp4u")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_v6fml"]
radius = 59.0085

[sub_resource type="LabelSettings" id="LabelSettings_v6fml"]
font_size = 40

[sub_resource type="LabelSettings" id="LabelSettings_cw2d6"]
font_size = 100
font_color = Color(0.352941, 0.239216, 0.25098, 1)

[node name="Player" type="CharacterBody2D"]
collision_layer = 3
collision_mask = 3
platform_on_leave = 1
script = ExtResource("1_v6fml")
speed = 550

[node name="Sprite" type="AnimatedSprite2D" parent="."]
scale = Vector2(1.25, 1.25)
sprite_frames = SubResource("SpriteFrames_jfpux")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_v6fml")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="throw_cooldown" type="Timer" parent="."]
wait_time = 0.3

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_top = -1.0
offset_right = 40.0
offset_bottom = 39.0

[node name="items_ui" type="TextureRect" parent="UI"]
modulate = Color(1, 1, 1, 0.858824)
z_index = 110
offset_left = -1254.0
offset_top = -774.0
offset_right = -854.0
offset_bottom = -174.0
texture = ExtResource("3_3li8b")

[node name="VBoxContainer" type="VBoxContainer" parent="UI/items_ui"]
modulate = Color(0.345098, 0.301961, 0.211765, 1)
z_index = 50
layout_mode = 0
offset_left = 133.0
offset_top = 61.0
offset_right = 458.0
offset_bottom = 541.0
theme_override_constants/separation = 28

[node name="Label" type="Label" parent="UI/items_ui/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Material amount"
label_settings = SubResource("LabelSettings_v6fml")

[node name="Label2" type="Label" parent="UI/items_ui/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Material amount"
label_settings = SubResource("LabelSettings_v6fml")

[node name="Label3" type="Label" parent="UI/items_ui/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Material amount"
label_settings = SubResource("LabelSettings_v6fml")

[node name="Label4" type="Label" parent="UI/items_ui/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Material amount"
label_settings = SubResource("LabelSettings_v6fml")

[node name="Label5" type="Label" parent="UI/items_ui/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Material amount"
label_settings = SubResource("LabelSettings_v6fml")

[node name="Label6" type="Label" parent="UI/items_ui/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Material amount"
label_settings = SubResource("LabelSettings_v6fml")

[node name="death_timer_ui" type="TextureRect" parent="UI/items_ui"]
layout_mode = 0
offset_left = 413.0
offset_right = 915.0
offset_bottom = 200.0
texture = ExtResource("4_cw2d6")

[node name="Label7" type="Label" parent="UI/items_ui/death_timer_ui"]
layout_mode = 0
offset_left = 160.0
offset_top = 25.0
offset_right = 410.0
offset_bottom = 162.0
text = "0 : 00"
label_settings = SubResource("LabelSettings_cw2d6")

[node name="img_ui" type="TextureRect" parent="."]
z_index = 100
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -526.0
offset_top = -554.0
offset_right = 194.0
offset_bottom = 166.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.5, 1.5)
stretch_mode = 3

[node name="Walk_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_mdl7e")
volume_db = -9.0

[node name="Damage_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_70d11")
volume_db = -5.0

[node name="island_timer" type="Timer" parent="."]

[node name="Throw_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_70d11")
volume_db = -5.0
attenuation = 1.03526

[node name="Item_collect_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_khinc")
volume_db = -5.0

[node name="Wave_sounds" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_bruh7")
volume_db = 1.2
pitch_scale = 0.9
autoplay = true

[node name="movement_bug_timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
autostart = true

[connection signal="timeout" from="throw_cooldown" to="." method="_on_throw_cooldown_timeout"]
[connection signal="timeout" from="island_timer" to="." method="_on_island_timer_timeout"]
[connection signal="finished" from="Wave_sounds" to="." method="_on_wave_sounds_finished"]
[connection signal="timeout" from="movement_bug_timer" to="." method="_on_movement_bug_timer_timeout"]
